[project]
name = "collections"
version = "0.1.0"
description = "Experimental Ansible project for leaning collections, roles, and playbooks development and knowlege sharing"
authors = [{ name = "Marvin A. Velasquez", email = "mavelasquezl85@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "ansible-dev-tools>=25.8.3,<26",
    "ansible-lint>=25.8.2,<26",
    "molecule-plugins>=25.8.12,<26",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]
